// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should could disable the editing with \`editMode\` as false 1`] = `
<div
  className="tageditor"
  onClick={[Function]}
  onMouseDown={[Function]}
/>
`;

exports[`should render \`placeholder\` when \`data\` is empty 1`] = `
<div
  className="tageditor"
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <p
    className="strong"
  >
    Your placeholder is here!
  </p>
</div>
`;

exports[`should render right thing and don't change unexpected 1`] = `
<div
  className="tageditor"
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <span
    className="tag-input"
    onClick={[Function]}
  >
    <span
      className="badge badge--with-close-icon"
    >
      <span
        onClick={[Function]}
      >
        first
      </span>
      <i
        className="icon-close-thin"
        onClick={[Function]}
      />
    </span>
  </span>
</div>
`;

exports[`should support custom props for every tag 1`] = `
<div
  className="tageditor"
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <span
    a={1}
    b={2}
    className="tag-input errored"
    onClick={[Function]}
  >
    <span
      className="badge badge--with-close-icon"
    >
      <span
        onClick={[Function]}
      >
        first
      </span>
      <i
        className="icon-close-thin"
        onClick={[Function]}
      />
    </span>
  </span>
</div>
`;
